RESOLVED FIXED303455
Hovering Caption Style Menu items does not change preview
https://bugs.webkit.org/show_bug.cgi?id=303455
Summary Hovering Caption Style Menu items does not change preview
Jer Noble
Reported 2025-12-02 22:44:08 PST
Hovering Caption Style Menu items does not change preview
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-02 22:44:14 PST
Jer Noble
Comment 2 2025-12-02 22:50:33 PST
EWS
Comment 3 2025-12-03 15:15:13 PST
Committed 303868@main (935b9fc3fbdf): <https://commits.webkit.org/303868@main> Reviewed commits have been landed. Closing PR #54755 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.